# lulu

./: .env  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENCE.txt  README.md  TODO.md  example.py  generate_models.sh  lulu.py  pyke.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-commit.yml  python-publish.yml
docs/: index.html  pyke.html  search.js
docs/pyke/: __version__.html  _base_client.html  _enums.html  _models.html  endpoints.html  enums.html  exceptions.html  main.html  models.html
docs/source/: conf.py  index.rst
examples/: account.py  challenges.py  champion.py  champion_mastery.py  clash.py  configure_logging.py  ddragon.py  example.py  league.py  league_exp.py  logging_example.py  lol_challenges.py  match.py  spectator.py  status.py  status_example.py  summoner.py  summoner_example.py
generators/: create_cdn_tests.py  create_cdns.py  generate_models.sh  get_schema_json.py
lulu/: __init__.py  __utils.py  account.py  base_client.py  challenges.py  champion.py  champion_mastery.py  clash.py  continent.py  division.py  league.py  level.py  main.py  mastery.py  match.py  queue.py  region.py  settings.py  spectator.py  status.py  summoner.py  tier.py
lulu/endpoints/: account.py  champion.py  champion_mastery.py  league_exp.py
lulu/enums/: continent.py  queue.py  tier.py
lulu/models/: account.py  champion_mastery.py
lulu/src/: lulu.py
pyke/: __init__.py  _base_client.py  main.py
pyke/_enums/: division.py  level.py
pyke/_models/: challenges_v1.py  champion_mastery_v4.py  match_v5.py  riftbound_content_v1.py  rso_match_v1.py  tft_league_v1.py  tft_match_v1.py  tft_status_v1.py  tft_summoner_v1.py  val_console_match_v1.py
pyke/endpoints/: account.py  challenges.py  champion.py  champion_mastery.py  clash.py  league.py  league_exp.py  lol_challenges.py  lol_rso_match.py  lol_status.py  match.py  rso_match.py  spectator.py  status.py  summoner.py  tournament.py  tournament_stub.py
pyke/enums/: continent.py  division.py  level.py
pyke/models/: __init__.py  account_v1.py  champion.py  champion_mastery_v4.py  champion_v3.py  clash_v1.py  get_schema_json.py  league.py  league_exp_v4.py  league_v4.py  lol_challenges_v1.py  lol_rso_match_v1.py  lol_status_v4.py  lor_deck_v1.py  lor_inventory_v1.py  match_v5.py  (+17 more)
riot/: riot.txt
test/: account_test.py  challenges_test.py  champion_mastery_test.py  champion_test.py  clash_test.py  clash_testa.py  league_test.py  match_test.py  spectator_test.py  status_test.py  summoner_test.py
tests/: base.py  challenges_test.py  champion_mastery_test.py  champion_test.py  clash_donttest.py  clash_test.py  league_test.py  match_test.py  spectator_test.py  status_test.py  summoner_test.py  test_account.py  test_challenges.py  test_champion.py  test_champion_mastery.py  test_clash.py  test_league.py  test_league_exp.py  test_lol_challenges.py  test_match.py  test_regions.py  test_spectator.py  test_status.py  test_summoner.py  test_timeout.py
utils/: __init__.py  caching.py  call.py  classes.py
(+148 files in other folders)
