[project]
name = "lulu"
version = "0.1.0"
description = "A Riot API wrapper specifically for League of Legends."
authors = [{ name = "diodemusic" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autodoc-typehints (>=3.2.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
