[project]
name = "pyke-lol"
version = "1.1.0"
description = "A Riot API wrapper specifically for League of Legends."
authors = [{ name = "diodemusic" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "datamodel-code-generator (>=0.34.0,<0.35.0)",
    "pdoc (>=15.0.4,<16.0.0)",
    "coverage (>=7.11.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "pyke", from = "src" }
]

[tool.pyright]
reportPrivateUsage = false
typeCheckingMode = "strict"

[tool.ruff.per-file-ignores]
"tests/*" = ["F401", "F811"]

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnusedImport = "none"
reportMissingTypeStubs = "none"

exclude = [
    ".env",
    "tests/*",
]
